
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_13__ TYPE_4__ ;
typedef struct TYPE_12__ TYPE_3__ ;
typedef struct TYPE_11__ TYPE_2__ ;
typedef struct TYPE_10__ TYPE_1__ ;


struct TYPE_13__ {TYPE_3__* fV7o35; } ;
typedef TYPE_4__ kWMzp1 ;
typedef enum bmwN91 { ____Placeholder_bmwN91 } bmwN91 ;
struct TYPE_10__ {int I9g9T1; int KfMd1; } ;
struct TYPE_11__ {TYPE_1__ V9ej93; } ;
struct TYPE_12__ {TYPE_2__ x2akp; } ;


 int ALDl73 ;
 unsigned long FAUQ42 () ;
 int RQO4U4 (TYPE_4__*) ;
 int TifAa1 (TYPE_4__*,unsigned long) ;
 int WdqxE (TYPE_4__*,int) ;
 int cy2jE4 ;
 unsigned long hoRsQ4 (int ) ;
 int tXFTB4 ;
 int yoLEn3 (TYPE_4__*) ;

__attribute__((used)) static enum bmwN91 Plb1C3(kWMzp1*J7Iki4){
unsigned long RcNOn;J7Iki4->fV7o35->x2akp.V9ej93.I9g9T1|=0x1;RcNOn=
hoRsQ4(ALDl73);{if(!(!TifAa1(J7Iki4,RcNOn)))goto X411V1;{{if(!(!
TifAa1(J7Iki4,RcNOn)))goto oChue3;{return cy2jE4;}oChue3:;}}X411V1:;
}WdqxE(J7Iki4,0x4);J7Iki4->fV7o35->x2akp.V9ej93.KfMd1&=0;{cKzYE4:{
__asm __volatile(""::);__asm __volatile("lock; addl $0,(%%esp)": : :
"cc");__asm __volatile(""::);}if(0)goto cKzYE4;};RQO4U4(J7Iki4);RcNOn
=FAUQ42();{if(!(!TifAa1(J7Iki4,RcNOn)))goto Lkzmt4;{{if(!(!TifAa1(
J7Iki4,RcNOn)))goto yxhJn3;{return cy2jE4;}yxhJn3:;}}Lkzmt4:;}WdqxE(
J7Iki4,0x4);yoLEn3(J7Iki4);return tXFTB4;}
